# gli

./: CMakeLists.txt  readme.txt
data/: test-rgb8-256a.dds  test-rgb8-256b.dds
gli/: gli.hpp
gli/core/: addressing.hpp  addressing.inl  clear.hpp  clear.inl  clone.inl  cow_ptr.hpp  format.hpp  format.inl  generate_mipmaps.hpp  generate_mipmaps.inl  header.hpp  header.inl  image.hpp  image.inl  image1d.hpp  image2d.hpp  image2d.inl  image3d.hpp  load_dds.hpp  load_dds.inl  loader.hpp  loader.inl  operation.hpp  operation.inl  operator.hpp  operator.inl  save_dds.inl  shared_array.hpp  shared_array.inl  shared_ptr.hpp  shared_ptr.inl  size.hpp  size.inl  storage.hpp  storage.inl  texture.hpp  texture.inl  texture1d.hpp  texture1d.inl  texture1d_array.hpp  (+11 more)
gli/gtx/: compression.hpp  compression.inl  fetch.hpp  fetch.inl  gl_texture2d.hpp  gl_texture2d.inl  gl_texture_2d.hpp  gl_texture_2d.inl  gradient.hpp  gradient.inl  loader.hpp  loader.inl  loader_dds.hpp  loader_dds.inl  loader_dds10.hpp  loader_dds10.inl  loader_dds9.hpp  loader_dds9.inl  loader_tga.hpp  loader_tga.inl  wavelet.hpp  wavelet.inl
test/: CMakeLists.txt  main.cpp
test/bug/: bug.cpp
test/core/: CMakeLists.txt  core.cpp  core_addressing.cpp  core_cow_ptr.cpp  core_image.cpp  core_image_2d.cpp  core_shared_ptr.cpp  core_storage.cpp  core_texture_1d.cpp  core_texture_1d_array.cpp  core_texture_2d.cpp  core_texture_2d_array.cpp  core_texture_3d.cpp  core_texture_cube.cpp  core_texture_cube_array.cpp  image_2d.cpp
test/gtc/: CMakeLists.txt
test/gtx/: CMakeLists.txt  gtx.cpp  gtx_loader.cpp
